// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Page layout widget restore via bulk update should succeed should create, delete, and restore a widget via bulk update 1`] = `
{
  "createdAt": Any<String>,
  "defaultTabToFocusOnMobileAndSidePanelId": null,
  "deletedAt": null,
  "id": Any<String>,
  "name": "Test Layout For Widget Restore",
  "objectMetadataId": null,
  "tabs": [
    {
      "applicationId": Any<String>,
      "createdAt": Any<String>,
      "deletedAt": null,
      "icon": null,
      "id": Any<String>,
      "layoutMode": "GRID",
      "pageLayoutId": Any<String>,
      "position": 0,
      "title": "Test Tab For Widget Restore",
      "updatedAt": Any<String>,
      "widgets": [
        {
          "configuration": {
            "aggregateFieldMetadataId": Any<String>,
            "aggregateOperation": "SUM",
            "configurationType": "AGGREGATE_CHART",
            "description": null,
            "displayDataLabel": true,
            "filter": null,
            "firstDayOfTheWeek": 1,
            "format": null,
            "label": null,
            "prefix": null,
            "suffix": null,
            "timezone": "UTC",
          },
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 1,
            "row": 0,
            "rowSpan": 1,
          },
          "id": Any<String>,
          "objectMetadataId": Any<String>,
          "pageLayoutTabId": Any<String>,
          "title": "Restored Graph Widget",
          "type": "GRAPH",
          "updatedAt": Any<String>,
        },
      ],
    },
  ],
  "type": "RECORD_PAGE",
  "updatedAt": Any<String>,
}
`;

exports[`Page layout widget restore via bulk update should succeed should handle mixed create, update, and restore in a single call 1`] = `
{
  "createdAt": Any<String>,
  "defaultTabToFocusOnMobileAndSidePanelId": null,
  "deletedAt": null,
  "id": Any<String>,
  "name": "Test Layout For Widget Restore",
  "objectMetadataId": null,
  "tabs": [
    {
      "applicationId": Any<String>,
      "createdAt": Any<String>,
      "deletedAt": null,
      "icon": null,
      "id": Any<String>,
      "layoutMode": "GRID",
      "pageLayoutId": Any<String>,
      "position": 0,
      "title": "Test Tab For Widget Restore",
      "updatedAt": Any<String>,
      "widgets": [
        {
          "configuration": {
            "configurationType": "IFRAME",
            "url": "https://updated.example.com",
          },
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 2,
            "row": 0,
            "rowSpan": 2,
          },
          "id": Any<String>,
          "objectMetadataId": null,
          "pageLayoutTabId": Any<String>,
          "title": "Updated Widget Title",
          "type": "IFRAME",
          "updatedAt": Any<String>,
        },
        {
          "configuration": {
            "aggregateFieldMetadataId": Any<String>,
            "aggregateOperation": "SUM",
            "configurationType": "AGGREGATE_CHART",
            "description": null,
            "displayDataLabel": true,
            "filter": null,
            "firstDayOfTheWeek": 1,
            "format": null,
            "label": null,
            "prefix": null,
            "suffix": null,
            "timezone": "UTC",
          },
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 1,
            "row": 1,
            "rowSpan": 1,
          },
          "id": Any<String>,
          "objectMetadataId": Any<String>,
          "pageLayoutTabId": Any<String>,
          "title": "Restored Widget",
          "type": "GRAPH",
          "updatedAt": Any<String>,
        },
        {
          "configuration": {
            "configurationType": "IFRAME",
            "url": "https://new.example.com",
          },
          "createdAt": Any<String>,
          "deletedAt": null,
          "gridPosition": {
            "column": 0,
            "columnSpan": 1,
            "row": 2,
            "rowSpan": 1,
          },
          "id": Any<String>,
          "objectMetadataId": null,
          "pageLayoutTabId": Any<String>,
          "title": "Brand New Widget",
          "type": "IFRAME",
          "updatedAt": Any<String>,
        },
      ],
    },
  ],
  "type": "RECORD_PAGE",
  "updatedAt": Any<String>,
}
`;
